Fix issue where scrollbars always appeared.

--- a/driehuys_christmas/static/css/modules/_typography.scss
+++ b/driehuys_christmas/static/css/modules/_typography.scss
@@ -27,7 +27,7 @@ body {
 
 pre {
   line-height: $pre-line-height;
-  overflow: scroll;
+  overflow-x: auto;
 }
 
 strong {
